[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/homespun.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_char = 7
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 60.0
margin_top = 15.0
margin_right = 260.0
margin_bottom = 164.0

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 33.0
theme = SubResource( 2 )
text = "skyvoyage"
align = 1

[node name="PlayButton" type="ToolButton" parent="CenterContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 200.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../ShopButton")
theme = ExtResource( 2 )
text = "play"

[node name="ShopButton" type="ToolButton" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 200.0
margin_bottom = 91.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
theme = ExtResource( 2 )
text = "shop"

[node name="SettingsButton" type="ToolButton" parent="CenterContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 200.0
margin_bottom = 120.0
focus_neighbour_top = NodePath("../ShopButton")
focus_neighbour_bottom = NodePath("../QuitButton")
theme = ExtResource( 2 )
text = "settings"

[node name="QuitButton" type="ToolButton" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 200.0
margin_bottom = 149.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../PlayButton")
theme = ExtResource( 2 )
text = "quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
